<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#00000000"
    android:id="@+id/dialog_layout"
     >

    <Button 
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_txt"
        android:background="#00000000"
        android:textSize="36sp"
        />
    <Button 
        android:id="@+id/other_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_txt"
        android:background="#00000000"
        android:textSize="36sp"
        />
    <Button 
        android:id="@+id/cancle_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancle_txt"
        android:background="#00000000"
        android:textSize="36sp"
        />

</LinearLayout>
